css/main.css
html {
  box-sizing: border-box;
  background-color: #f2f1ed;
  font-family: sans-serif;
  line-height: 1.5;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  background-color: #fdf6e3;
}

header {
  font-size: 1.5rem;
}

ul {
  font-family: sans-serif;
}

.logo {
  text-transform: uppercase;
}

.wrapper {
  background-color: #eee8d5;
}

#contents #favs #facts #types {
  color: #93a1a1;
}

.wrapper > .dfn {
  background-color: #b58900;
}
.dfn > p + strong {
  color: #fff;
}

a  {
  background-color: #719e07;
}

.no-highlight {
  background-color: transparent;
}

[rel="external"] {
  background-color: #2694d8;
}

ol > li:first-child {
  color: #719e47;
}

ol > li:last-child {
  color: #2aa198;
}

.types > li:nth-child(odd) {
  background-color: #657ba3;
}

.types > li:nth-child(even) {
  background-color: #586e75;
}

.types > li:nth-child(3n) {
  background-color: #d04b16;
}

